--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="src/style.css">
+  <script type="text/javascript" src="js/script.js" defer></script>
   <title>Document</title>
 </head>
 <body>
-  <div id="music">
+  <div class="music">
     <img src="images/music_pointer.png" alt="指针">
-    <img class="play" src="images/music_disc.png" alt="碟片">
+    <img class="play" id="music" src="images/music_disc.png" alt="碟片">
   </div>
   <div class="page" id="page1">
     <div class="bg"></div>
@@ -19,6 +20,7 @@
     <div class="p1_words">开心快乐每一天</div>
   </div>
   <div class="page" id="page2">
+    <div class="bg p2_bg_loading"></div>
     <div class="bg"></div>
     <div class="p2_circle"></div>
     <div class="p2_2017"></div>
@@ -31,5 +33,8 @@
     <div class="p3_second"></div>
     <div class="p3_blessing"></div>
   </div>
+  <audio autoplay="true">
+    <scoure src="audio/happynewyear.mp3" type="audio/mpeg">
+  </audio>
 </body>
 </html>
