--- a/index.html
+++ b/index.html
@@ -2,9 +2,11 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="src/style.css">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge,chrome=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0,
+   maxmum-scale=1.0, minmum-scale=1.0, user-scalable=no">
+  <meta name="format-detection" content="telephone=no">
+<link rel="stylesheet" href="src/style.css">
   <script type="text/javascript" src="js/script.js" defer></script>
   <title>Document</title>
 </head>
