--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <div class="p3_blessing"></div>
   </div>
   <audio autoplay="true">
-    <scoure src="audio/happynewyear.mp3" type="audio/mpeg">
+    <source src="./audio/happy.mp3" type="audio/mpeg" />
   </audio>
 </body>
 </html>
