--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
   </div>
   <div class="page" id="page1">
     <div class="bg"></div>
-    <div class="p1_lantern">点击屏幕<br>开启好运2017</div>
+    <div class="p1_lantern">点击屏幕<br>开启好运2023</div>
 
     <div class="p1_i"></div>
-    <div class="p1_words">开心快乐每一天</div>
+    <div class="p1_words">卓芳，快乐每一天</div>
   </div>
   <div class="page" id="page2">
     <div class="bg p2_bg_loading"></div>
